CFNInit-fullAuto.yaml
# Parameters:
#   # VpcId:
#   #   Description: Enter the VpcId
#   #   Type: AWS::EC2::VPC::Id
Mappings:
  RegionMap:
    us-east-1:
      AMI: ami-1853ac65
    us-west-1:
      AMI: ami-bf5540df
    us-west-2:
      AMI: ami-08e2d37b6a0129927
    eu-west-1:
      AMI: ami-3bfab942
    ap-southeast-1:
      AMI: ami-e2adf99e
    ap-southeast-2:
      AMI: ami-43874721    
Resources:
  # PrivateKey:
  #   Type: Custom::RSAKey
  #   Properties:
  #     Name: /demo/private-key
  #     ServiceToken: !Sub 'arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:binxio-cfn-secret-provider'
  EC2Instance:
    Type: AWS::EC2::Instance
    Metadata: 
      AWS::CloudFormation::Init:
        configSets:
            default:
                - install_docker
                - install_compose
                - enable_compose
                - install_git
                - start_streamlit
        install_docker:
            packages:
                yum:
                    docker: []
            services:
                sysvinit:
                    docker:
                        enabled: "true"
                        ensureRunning: "true"
            commands:
                docker_for_ec2_user:
                    command: usermod -G docker ec2-user
        install_compose:
            commands:
                compose_for_ec2_user:
                    command: curl -L https://github.com/docker/compose/releases/download/1.20.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
                      # - curl -L https://github.com/docker/compose/releases/download/1.20.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
                      # - chmod +x /usr/local/bin/docker-compose
                      # - ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
        enable_compose:
            commands:
                enable_for_ec2_user:
                    command: chmod +x /usr/local/bin/docker-compose; ln -s /usr/local/bin/docker-compose /usr/bin/docker-compose
        install_git:
            packages:
                yum:
                    git: []
            commands:
                git_clone_helloworld:
                    command: git clone https://github.com/cmskzhan/helloworld.git /home/ec2-user/helloworld
        start_streamlit:
            commands:
                docker_compose_up:
                    command: cd /home/ec2-user/helloworld/concepts/python/dockerfile; docker-compose up -d
    Properties:
      InstanceType: t2.micro
      ImageId:
        Fn::FindInMap:
        - RegionMap
        - !Ref AWS::Region
        - AMI
      SecurityGroupIds:
        - !Ref MySecurityGroup
      Tags:
        - Key: Name
          Value: lastResort
      KeyName: att1t3
      UserData:
        'Fn::Base64': 
          !Sub |
            #!/bin/bash -xe            
            # Ensure AWS CFN Bootstrap is the latest
            yum install -y aws-cfn-bootstrap
            # Install the files and packages from the metadata
            /opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource EC2Instance  --region ${AWS::Region}
            # All done so signal success
            /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Open Ports ssh, web
      # VpcId: !Ref VpcId
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '22'
        ToPort: '22'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '80'
        ToPort: '80'
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: '443'
        ToPort: '443'
        CidrIp: 0.0.0.0/0
      # - IpProtocol: tcp
      #   FromPort: '8080'
      #   ToPort: '8080'
      #   CidrIp: 0.0.0.0/0
Outputs:
  Website:
    Description: The Public DNS for the EC2 Instance
    Value: !Sub 'http://${EC2Instance.PublicDnsName}'
